--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,8 +1,8 @@
 :root {
     /* Primary colors*/
     --color-primary: #3ad8fa;
-    --color-link: #00abd1;
-    --color-accent-coral: #ff6b6c;
+    --color-link: #00ab--color-accent-corald1;
+    : #ff6b6c;
     --color-accent-mustard: #ffc75f;
     --color-accent-indigo: #6c5ce7;
     --color-accent-teal: #079992;
