education section bg

--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,6 +1,6 @@
 /* src/components/home/Hero.module.css */
 
-.hero-bg {
+.education-bg {
     position: relative;
     width: 100vw;
     left: 50%;
