--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,4 +1,5 @@
 /* src/styles/education.css */
+
 .education-bg-layer {
     position: relative;
     width: 100vw;
@@ -17,7 +18,7 @@
             var(--color-divider) 1px,
             transparent 1px
         ),
-        /* degradado PNG */ url("/images/bg_02.png");
+        /* degradado PNG */ url("/images/bg_04.png");
 
     /* 2) Tamaños: 20×20 para el patrón, cover para la imagen */
     background-size: 20px 20px, cover;
@@ -26,4 +27,8 @@
     background-position: 0 0, center center;
 
     background-repeat: repeat, no-repeat;
+}
+
+.margin-title {
+    margin-left: -1rem;
 }
