--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -18,7 +18,7 @@
             var(--color-divider) 1px,
             transparent 1px
         ),
-        /* degradado PNG */ url("/images/bg_04.png");
+        /* degradado PNG */ url("/images/bg_07.png");
 
     /* 2) Tamaños: 20×20 para el patrón, cover para la imagen */
     background-size: 20px 20px, cover;
@@ -30,5 +30,5 @@
 }
 
 .margin-title {
-    margin-left: -1rem;
+    padding-left: -1rem;
 }
